IMTA-15526 : notify-microservice Java17 upgrade (function app)